test/compile_errors/err_issue64_ref_hashset_contains_bad_value_type.w
//! expect-error: wrong argument type in call to 'HashSet.contains'

fn main:
    let set: HashSet[i32] = HashSet.new()
    let borrowed = &set
    borrowed.contains("x")
